--- a/reactapp/src/Pages/index.css
+++ b/reactapp/src/Pages/index.css
@@ -3,20 +3,15 @@
     margin: auto;
     padding: 0rem;
     text-align: center;
-    background-color: antiquewhite;
+    
     background-image: url("../assets/Gemini_Generated_Image_f1c5g6f1c5g6f1c5.jpg");
-    background-position:fixed;
+    background-position:center;
     background-size: cover;
    
   }
   
-  .background-image
-{    
-    
-}
-
 .background{
-    background-color: rgba(250, 235, 215, 0.574);
+    background-color: rgba(250, 241, 215, 0.574);
     padding: 1rem;
     
 }
