--- a/reactapp/src/Components/components.css
+++ b/reactapp/src/Components/components.css
@@ -1,15 +1,74 @@
 
+*{
 
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
 .navigation{
  
   justify-content: center;
   background-color: rgba(6,57,76,255);
-  font-family: 'Courier New', Courier, monospace;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  
 }
 
-.bi{
 
+.card-outline{
+  min-height: 60vh;
+  width: 50vw;
+  margin: 5rem auto;
+  border: 1px solid #ffffff22;
+  background-color: #282c34;
+  background: linear-gradient(0deg, rgba(6,57,76,255) 10%, rgba(17,0,32,.5) 100%);
+  border-radius: .7rem;
+  overflow:auto;
+  backdrop-filter: blur(7px);
+  transition: 0.4s all;
+  box-shadow:  -2px 0 7px #000;
+  display: flex; /* Add this line */
+  flex-direction: column; /* Add this line */
+  align-items: center; /* Add this line */
+    
+.name{
+margin-top: 10px;
+text-align: start;
+font-size: 30px;
+color: cadetblue;
+text-align: center;
+
+ }
+ .characterClass{
+  text-align: center;
+  font-size: 20px;
+  color: burlywood;
+  
+ }
+ .img{
+  
+  flex-wrap: wrap;
+ 
+ }
+ .rest{
+  text-align: start;
+  font-size:18px
+ }
+ .hitpoints{
+
+  text-align: center;
+color: blueviolet;
+ }
+  &:hover{
+    border: 1px solid #ffffff44;
+    box-shadow: 0 7px 50px 10px #000000aa;
+    transform: scale(1.01);
+    filter: brightness(1.1);
+    
+    ::before{
+      filter: brightness(.5);
+      
+    }
+  }
 }
+
+
 
 
 .button{
@@ -27,8 +86,11 @@
 
 .mask{
   
-  background-color: rgb(0, 0, 0);
+  background-color:  rgba(6,57,76,255);
+  background-image: url("../assets/Gemini_Generated_Image_f1c5g6f1c5g6f1c5.svg");
   justify-content: center;
+  background-position:center;
+  background-size: cover;
 
 }
 
@@ -37,10 +99,31 @@
   border-bottom: none;
 }
 
+.label{
 
+font-size: large;
+font-style: italic;
+
+
+
+}
+
+.input{
+border-radius: 30px;
+border-color: #151f37;
+
+}
+
+.attributes
+{
+  height:15vh;
+  border-radius: 19px;
+}
 
 .background
 {
-  background-color: rgb(106, 106, 105);
-
+  background: linear-gradient(0deg, rgba(6,57,76,255) 10%, rgba(17,0,32,.5) 100%);
+  border-radius: 10px;
+  color: aliceblue;
+  
 }
